--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@
     --btn-padding: 0.6rem 2rem;
     --search-padding: 0.6rem 1rem;
     --card-padding: 1rem;
+
+    --sticky-top-left: 5.4rem;
+    --sticky-top-right: -18rem;
 }
 
 body {
@@ -35,7 +38,7 @@ body {
     overflow-x: hidden;
 }
 
-/* GENERAL STYLES */
+/* ============GENERAL STYLES============ */
 .container {
     width: 80%;
     margin: 0 auto;
@@ -73,7 +76,7 @@ img {
     color: var(--color-gray);
 }
 
-/* NAVBAR */
+/* ============NAVBAR============ */
 nav {
     width: 100%;
     background-color: var(--color-white);
@@ -119,57 +122,161 @@ nav .search-bar input[type="search"]::placeholder {
     gap: 2rem;
 }
 
+/* ============MAIN============ */
 main {
-    padding-top: 100px;
+    position: relative;
+    top: 5.4rem;
 }
 
 main>.container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 18vw auto 20vw;
+    column-gap: 2rem;
+    position: relative;
 }
 
-.side-container {
-    padding: 15px 20px;
-    border-radius: var(--card-border-radius);
+/* ============LEFT============ */
+
+.left {
+    top: var(--sticky-top-left);
+    position: sticky;
+
+    height: max-content;
+}
+
+.profile {
     display: flex;
     align-items: center;
-    justify-content: center;
-    background-color: var(--color-danger);
-    width: 230px;
+    column-gap: 1rem;
+    padding: var(--card-padding);
+    background-color: var(--color-white);
+    border-radius: var(--card-border-radius);
+
+    width: 100%;
+    overflow-x: hidden;
 }
 
-/* .side-container p, .side-container h5{
-    display: inline;
-} */
-
-.links-container {
-    margin-left: 10px;
-}
-
-
-.links-container a {
-    color: var(--color-light);
+.profile a {
     white-space: nowrap;
 }
 
-#handle {
+/* ============SIDEBAR============ */
+.sidebar {
+    margin-top: 1rem;
+    background-color: var(--color-white);
+    border-radius: var(--border-radius);
+}
+
+.menu-item {
+    display: flex;
+    column-gap: 1.5rem;
+    height: 4rem;
+    transition: all 300ms ease;
+
+    cursor: pointer;
+    position: relative;
+    align-items: center;
+}
+
+.menu-item:hover {
+    background-color: var(--color-light);
+}
+
+.menu-item i {
+    position: relative;
+    margin-left: 2rem;
+    font-size: 1.4rem;
     color: var(--color-gray);
 }
 
-.left {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-aside a{
+i .notification-count {
+    position: absolute;
+    top: -0.2rem;
+    right: -0.3rem;
+    color: var(--color-white);
+    font-size: 0.7rem;
+    background-color: var(--color-danger);
+    border-radius: 0.8rem;
+    padding: 0.1rem 0.4rem;
+
     width: fit-content;
 }
-aside {
-    display: flex;
-    flex-direction: column;
+
+.sidebar h3 {
+    font-size: 1rem;
 }
 
-a h3 {
-    display: inline;
+.sidebar .active {
+    background-color: var(--color-light);
+}
+
+.sidebar .active i,
+.sidebar .active h3 {
+    color: var(--color-primary);
+}
+
+.sidebar .active::before {
+    content: "";
+    width: 0.5rem;
+    height: 100%;
+    background-color: var(--color-primary);
+
+    position: absolute;
+    display: block;
+}
+
+.sidebar .menu-item:first-child.active {
+    border-top-left-radius: var(--card-border-radius);
+    overflow: hidden;
+}
+
+.sidebar .menu-item:last-child.active {
+    border-bottom-left-radius: var(--card-border-radius);
+    overflow: hidden;
+}
+
+.left .btn {
+    padding: 1rem 0;
+    text-align: center;
+    width: 100%;
+    margin-top: 1rem;
+}
+
+/* ============NOTIFICATION POPUP============ */
+.notifications {
+    top: 0;
+    left: 110%;
+    position: absolute;
+    background-color: var(--color-white);
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+    width: 30rem;
+    box-shadow: 0 0 2rem hsl(var(--color-primary), 75% 60% 25%);
+    z-index: 2;
+
+    display: flex;
+    flex-direction: column;
+
+    display: none;
+}
+
+.notifications::before {
+    content: "";
+    width: 1.2rem;
+    height: 1.2rem;
+    left: -0.6rem;
+    background-color: var(--color-white);
+    position: absolute;
+    transform: rotate(45deg);
+}
+
+.notification-popup {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    align-items: center;
+}
+
+.nootificaion-text small {
+    display: block;
 }
