--- a/style.css
+++ b/style.css
@@ -103,6 +103,10 @@ nav .container {
     background-color: var(--color-light);
     border-radius: var(--border-radius);
     padding: var(--search-padding);
+    width: auto;
+    display: flex;
+    align-items: center;
+
 }
 
 .search-bar input[type="search"] {
@@ -136,6 +140,10 @@ main>.container {
 }
 
 /* ============LEFT============ */
+nav .logo {
+    white-space: nowrap;
+
+}
 
 .left {
     top: var(--sticky-top-left);
@@ -260,14 +268,14 @@ i .notification-count {
     background-color: var(--color-white);
     border-radius: var(--card-border-radius);
     padding: var(--card-padding);
-    width: 30rem;
     box-shadow: 0 0 2rem hsl(var(--color-primary), 75% 60% 25%);
     z-index: 2;
-
+    width: 30rem;
+    height: fit-content;
     display: flex;
     flex-direction: column;
 
-    display: none;
+    /* display: none; */
 }
 
 .notifications::before {
@@ -702,4 +710,123 @@ i .notification-count {
     border: 2px solid var(--color-gray);
     border-radius: 50%;
     margin-right: 1rem;
+}
+
+.mobile-nav {
+    display: none;
+}
+
+@media (max-width:1200px) {
+    .container {
+        width: 96%;
+    }
+
+    main .container {
+        grid-template-columns: 5.5rem auto 30vw;
+    }
+
+
+    .left .profile,
+    .left h3,
+    .left .btn {
+        display: none;
+    }
+
+    .notifications {
+        position: absolute;
+        top: 1.8rem;
+    }
+}
+
+@media (max-width:965px) {
+    main .container {
+        grid-template-columns: 5.5rem 47vw 16.5rem;
+    }
+
+}
+
+@media (max-width:925px) {
+    main .container {
+        grid-template-columns: 5.5rem auto;
+    }
+
+    .right {
+        display: none;
+    }
+}
+
+@media (max-width:670px) {
+    html {
+        font-size: 14px;
+    }
+
+    main .container {
+        grid-template-columns: 0 auto 0;
+        width: 93%;
+    }
+
+    body {
+        position: relative;
+    }
+
+    nav {
+        display: none;
+    }
+
+    .mobile-nav .sidebar {
+        display: flex;
+        margin: 0;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 15px;
+        border-radius: 1.5rem;
+    }
+
+    .mobile-nav {
+        z-index: 10;
+        top: 0;
+        display: block;
+        right: 1rem;
+        left: 0.8rem;
+        height: fit-content;
+        position: fixed;
+        width: 93%;
+        margin: 0 auto;
+    }
+
+    .mobile-nav .menu-item {
+        column-gap: 0.4rem;
+    }
+
+    .mobile-nav .menu-item i {
+        margin-left: 0.4rem;
+    }
+
+    .container .left {
+        display: none;
+    }
+
+    .container .middle {
+        width: 92vw;
+    }
+
+    .mobile-nav .sidebar .active::before {
+        position: absolute;
+        bottom: 2rem;
+        transform: rotate(90deg);
+    }
+
+    .notifications {
+        position: absolute;
+        top: 5rem;
+        left: 1rem;
+        width: 65vw;
+        font-size: 14px;
+        /* display: none; */
+    }
+
+    .notifications::before {
+        left: 0.7rem;
+        top: -0.6rem;
+    }
 }
