--- a/style.css
+++ b/style.css
@@ -82,9 +82,9 @@ nav {
     background-color: var(--color-white);
     padding: 0.7rem 0;
     position: fixed;
-    z-index: 10;
+    z-index: 1;
 
-    top: 0;
+    /* top: 0; */
 }
 
 .profile-pic {
@@ -103,16 +103,16 @@ nav .container {
     background-color: var(--color-light);
     border-radius: var(--border-radius);
     padding: var(--search-padding);
-    width: auto;
     display: flex;
+    position: relative;
     align-items: center;
-
 }
 
-.search-bar input[type="search"] {
+input[type="search"],
+input[type="text"] {
+    padding: 0.2rem;
     background-color: transparent;
     width: 30vw;
-    margin-left: 1rem;
     font-size: 0.9rem;
     color: var(--color-dark);
 }
@@ -120,6 +120,7 @@ nav .container {
 .search-bar input[type="search"]::placeholder {
     color: var(--color-gray);
 }
+
 
 .profile-bar {
     display: flex;
@@ -383,12 +384,16 @@ i .notification-count {
 
 .create-post input[type="text"] {
     width: 100%;
-    padding-left: 1rem;
+    height: 100%;
     background: transparent;
     color: var(--color-dark);
     margin-right: 1rem;
 
     justify-self: start;
+}
+
+.create-post .profile-pic {
+    margin-right: 1rem;
 }
 
 .feed {
@@ -765,10 +770,6 @@ i .notification-count {
         width: 93%;
     }
 
-    body {
-        position: relative;
-    }
-
     nav {
         display: none;
     }
@@ -776,29 +777,34 @@ i .notification-count {
     .mobile-nav .sidebar {
         display: flex;
         margin: 0;
-        align-items: center;
-        justify-content: space-between;
+        width: 100%;
+        margin: 0 auto;
+        /* border-radius: 0; */
         font-size: 15px;
-        border-radius: 1.5rem;
     }
 
     .mobile-nav {
-        z-index: 10;
+        z-index: 3;
         top: 0;
         display: block;
-        right: 1rem;
-        left: 0.8rem;
-        height: fit-content;
+        /* right: 1rem;
+        left: 1.4rem; */
         position: fixed;
-        width: 93%;
-        margin: 0 auto;
+        width: 100vw;
+    }
+
+    .mobile-nav .sidebar {
+        /* background-color: rebeccapurple; */
+        border-radius: 0rem !important;
     }
 
     .mobile-nav .menu-item {
-        column-gap: 0.4rem;
+        text-align: center;
+        width: 100%;
     }
 
     .mobile-nav .menu-item i {
+        width: 100%;
         margin-left: 0.4rem;
     }
 
@@ -812,21 +818,32 @@ i .notification-count {
 
     .mobile-nav .sidebar .active::before {
         position: absolute;
-        bottom: 2rem;
-        transform: rotate(90deg);
+        top: 0;
+        width: 100%;
+        height: 0.5rem;
     }
 
     .notifications {
         position: absolute;
         top: 5rem;
-        left: 1rem;
+        left: 0.3rem;
         width: 65vw;
         font-size: 14px;
-        /* display: none; */
+        display: none;
     }
 
     .notifications::before {
         left: 0.7rem;
-        top: -0.6rem;
+        top: -0.4rem;
+    }
+
+    i .notification-count {
+        right: 0.9rem;
+    }
+
+    @media (max-width:555px) {
+        i .notification-count {
+            right: 0.4rem;
+        }
     }
 }
