--- a/style.css
+++ b/style.css
@@ -39,9 +39,8 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: var(--color-light);
-
     color: var(--color-dark);
-    overflow-x: hidden;
+    overflow-x: scroll;
 }
 
 /* ============GENERAL STYLES============ */
@@ -315,8 +314,10 @@ i .notification-count {
 .stories {
     display: flex;
     column-gap: 0.5rem;
-
-    height: 12rem;
+    overflow-x: scroll;
+    scrollbar-width: none;
+    scroll-behavior: smooth;
+    height: 14rem;
     justify-content: space-between;
 }
 
@@ -329,11 +330,9 @@ i .notification-count {
     padding: var(--card-padding);
     font-size: 0.75rem;
     border-radius: var(--card-border-radius);
-
     position: relative;
     overflow: hidden;
-    width: 100%;
-    /* width: 6rem; */
+    min-width: 20%;
 }
 
 .story::after {
@@ -346,7 +345,7 @@ i .notification-count {
 }
 
 .story .profile-pic {
-    width: 2rem;
+    width: 2.5rem;
     align-self: start;
     border: 3px solid var(--color-primary);
 }
@@ -756,7 +755,7 @@ i .notification-count {
     }
 }
 
-@media (max-width:965px) {
+@media (max-width:975px) {
     main .container {
         grid-template-columns: 5.5rem 47vw 16.5rem;
     }
@@ -785,6 +784,10 @@ i .notification-count {
 
     nav {
         display: none;
+    }
+
+    .story {
+        min-width: 30%;
     }
 
     .mobile-nav .sidebar {
