--- a/style.css
+++ b/style.css
@@ -818,7 +818,7 @@ i .notification-count {
     }
 
     .mobile-nav .menu-item i {
-        font-size: 25px;
+        font-size: 28px;
         width: 100%;
         margin-left: 0.4rem;
     }
@@ -853,7 +853,9 @@ i .notification-count {
     }
 
     i .notification-count {
-        right: 30%;
+        font-size: 10px;
+        right: 35%;
+        top: 0.5%;
     }
 
     .choose-bg {
